--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -52,6 +52,6 @@
         </fieldset>
         <br>
         <br>
-        <%= f.submit "Criar conta", class: "button medium color" %>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ou&nbsp;&nbsp;<%= link_to "cancelar", users_path %>
+        <%= f.submit "Cadastrar morador", class: "button medium color" %>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ou&nbsp;&nbsp;<%= link_to "cancelar", users_path %>
     <% end %>
 </div>
