--- a/app/views/people/new.html.erb
+++ b/app/views/people/new.html.erb
@@ -1,5 +1,57 @@
-<h1>New person</h1>
+<div class="sixteen columns">
+    <h1 class="page-title">
+        Cadastrar morador
+        <span class="line"></span>
+    </h1>
+    <% unless flash.empty? %>
+        <% flash.each do |key, value| %>
+            <div class="alert <%= key %> hideit">
+                <p><%= value %></p>
+                <span class="close"></span>
+            </div>
+        <% end %>
+    <% end %>
 
-<%= render 'form' %>
-
-<%= link_to 'Back', people_path %>
+    <%= form_for(@user, :html => { :multipart => true, :class => "form-elements" }) do |f| %>
+        <fieldset>
+            <%= f.label :email, "E-mail" %><br>
+            <%= f.text_field :email, :class => 'span5' %>
+        </fieldset>
+        <fieldset>
+            <%= f.label :password, "Senha (no mínimo 6 caracteres)" %><br>
+            <%= f.password_field :password, :placeholder => "Escolha uma senha", :class => 'span5', autocomplete: "off" %>
+            <br>
+            <%= f.password_field :password_confirmation, :placeholder => "Confirme a senha", :class => 'span5', autocomplete: "off" %>
+        </fieldset>
+        <fieldset>
+            <%= f.label :apartment_id, "Apartamento" %><br>
+            <%= collection_select(:user, :apartment_id, Apartment.all, :id, :number_with_building, { :include_blank => 'Selecione o apartamento' }, { :class => 'subscribe-text' }) %>
+        </fieldset>
+        <fieldset>
+            <%= f.label :name, "Nome completo" %><br>
+            <%= f.text_field :name, :class => 'span5' %>
+        </fieldset>
+        <fieldset>
+            <%= f.label :cpf, "CPF" %><br>
+            <%= f.text_field :cpf, :class => 'span5' %>
+        </fieldset>
+        <fieldset>
+            <%= f.label :birthdate, "Data de nascimento" %><br>
+            <%= f.date_select :birthdate %>
+        </fieldset>
+        <fieldset>
+            <%= f.label :phone_number, "Telefone celular" %><br>
+            (<%= f.text_field :phone_area_code, :class => 'span1' %>) <%= f.text_field :phone_number, :class => 'span4' %>
+        </fieldset>
+        <fieldset>
+            <%= f.label :picture, "Foto do perfil" %>
+            <br>
+            <br>
+            <%= avatar_for @user, 50 %>
+            <%= f.file_field :picture %>
+        </fieldset>
+        <br>
+        <br>
+        <%= f.submit "Cadastrar morador", class: "button medium color" %>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ou&nbsp;&nbsp;<%= link_to "cancelar", users_path %>
+    <% end %>
+</div>
