--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,8 +14,8 @@
 					<li>
 						<a href="#">Minha conta</a>
 						<ul>
+							<li><%= link_to "Dados pessoais*", person_path(current_user.person) %></li>
 							<li><a href="#">Pagamentos</a></li>
-							<li><%= link_to "Dados pessoais*", user_path(current_user) %></li>
 							<li><%= link_to "Taxa de condomínio", '/' %></li>
 							<li><a href="formas_de_pagamento.html">Formas de Pagamento</a></li>
 							<li><a href="#">Preferências</a></li>
@@ -27,29 +27,27 @@
 								<li><%= link_to "Gerenciar condomínios", condos_path %></li>
 								<li><%= link_to "Gerenciar blocos", buildings_path %></li>
 								<li><%= link_to "Gerenciar apartamentos", apartments_path %></li>
+								<li><%= link_to "Gerenciar moradores*", people_path %></li>
 							</ul>
 						</li>
 					<% end %>
 					<li>
 						<a href="#">Condomínio</a>
 						<ul>
-							<li><%= link_to "Dados cadastrais*", condo_path(current_condo) %></li>
-							<li><a href="#">Mural de Avisos</a></li>
-							<li><a href="#">Ideias de Melhorias</a>
+							<li><a href="#">Parede do Elevador</a></li>
+							<li><a href="#">Caixa de Ideias</a>
 								<ul>
-									<li><a href="#">Amadurecimento</a></li>
-									<li><a href="#">Votação</a></li>
+									<li><a href="#">Em Discussão</a></li>
+									<li><a href="#">Em Votação</a></li>
 								</ul>
 							</li>
-							<li><%= link_to "Moradores*", users_path %></li>
-							<li><%= link_to "Apartamentos", apartments_path %></li>
 							<li><a href="#">Reservas</a></li>
 							<li><a href="#">Livro de Ocorrências</a></li>
 							<li><a href="#">Fale com o síndico</a></li>
 						</ul>
 					</li>
 					<li>
-						<a href="#">Mensagens (2)</a>
+						<a href="#">Mensagens*</a>
 						<ul>
 							<li><a href="#">Recebidas (2)</a></li>
 							<li><a href="#">Enviadas</a></li>
