--- a/app/views/people/index.html.erb
+++ b/app/views/people/index.html.erb
@@ -12,17 +12,17 @@
 
 <div class="sixteen columns">
     <h1 class="page-title">
-        Vizinhos queridos! <small>(<%= User.count %>)</small>
+        Vizinhos queridos! <small>(<%= Person.count %>)</small>
         <span class="line"></span>
     </h1>
     <% if current_user.admin? %>
         <br>
-        <span class="circle_plus icon black"></span><%= link_to "cadastrar morador", new_user_path %>
+        <span class="circle_plus icon black"></span><%= link_to "cadastrar morador", new_person_path %>
         <br>
     <% end %>
     <%= will_paginate %>
     <ul class="users">
-        <%= render @users%>
+        <%= render @people%>
     </ul>
     <%= will_paginate %>
 </div>
