--- a/app/views/people/new.html.erb
+++ b/app/views/people/new.html.erb
@@ -12,20 +12,23 @@
         <% end %>
     <% end %>
 
-    <%= form_for(@user, :html => { :multipart => true, :class => "form-elements" }) do |f| %>
+    <%= form_for(@person, :html => { :multipart => true, :class => "form-elements" }) do |f| %>
         <fieldset>
-            <%= f.label :email, "E-mail" %><br>
-            <%= f.text_field :email, :class => 'span5' %>
-        </fieldset>
-        <fieldset>
-            <%= f.label :password, "Senha (no mínimo 6 caracteres)" %><br>
-            <%= f.password_field :password, :placeholder => "Escolha uma senha", :class => 'span5', autocomplete: "off" %>
-            <br>
-            <%= f.password_field :password_confirmation, :placeholder => "Confirme a senha", :class => 'span5', autocomplete: "off" %>
-        </fieldset>
+            <%= f.label :picture, "Foto do perfil" %>
+            <% if @person.has_facebook? %>
+                <br><br>
+                <%= image_tag fb_picture(@person.user.facebook_id, 150) %>
+                <br><br>
+            <% else %>
+                <br><br>
+                <%= avatar_for @person, 50 %>
+                <%= f.file_field :picture %>
+                <br>
+            </fieldset>
+        <% end %>
         <fieldset>
             <%= f.label :apartment_id, "Apartamento" %><br>
-            <%= collection_select(:user, :apartment_id, Apartment.all, :id, :number_with_building, { :include_blank => 'Selecione o apartamento' }, { :class => 'subscribe-text' }) %>
+            <%= collection_select(:person, :apartment_id, Apartment.all, :id, :number, { :include_blank => 'Selecione o apartamento' }, { :class => 'subscribe-text' }) %>
         </fieldset>
         <fieldset>
             <%= f.label :name, "Nome completo" %><br>
@@ -40,18 +43,16 @@
             <%= f.date_select :birthdate %>
         </fieldset>
         <fieldset>
+            <%= f.label :gender, "Sexo" %><br>
+            <%= f.select :gender, to_genders_select(), { :include_blank => 'Selecione' } %>
+        </fieldset>
+        <fieldset>
             <%= f.label :phone_number, "Telefone celular" %><br>
             (<%= f.text_field :phone_area_code, :class => 'span1' %>) <%= f.text_field :phone_number, :class => 'span4' %>
         </fieldset>
-        <fieldset>
-            <%= f.label :picture, "Foto do perfil" %>
-            <br>
-            <br>
-            <%= avatar_for @user, 50 %>
-            <%= f.file_field :picture %>
-        </fieldset>
         <br>
-        <br>
-        <%= f.submit "Cadastrar morador", class: "button medium color" %>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ou&nbsp;&nbsp;<%= link_to "cancelar", users_path %>
+        <%= f.submit "Cadastrar morador", class: "button medium color" %>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ou&nbsp;&nbsp;<%= link_to "cancelar", people_path %>
     <% end %>
+    <br>
+    <br>
 </div>
