implementando fluxo de cadastro com facebook

--- a/app/views/users/sign_up.html.erb
+++ b/app/views/users/sign_up.html.erb
@@ -1,19 +1,86 @@
+<div id="fb-root"></div>
+<script>
+    // Additional JS functions here
+    function setFacebookId() {
+        FB.api('/me?fields=id, email, name, gender, birthday', function(response) {
+        //FB.api('/me', function(response) {
+            facebook_id = response['id'];
+            email = response['email'];
+            gender = response['gender'];
+            birthdate = response['birthday'];
+            window.location.href='/sign_up_with_fb?facebook_id='+facebook_id+'&email='+email+'&gender='+gender+'&birthdate='+birthdate;
+        });
+    }
+
+    function authorizeOnFacebook() {
+        FB.login(function(response) {
+            if (response.authResponse) {
+                setFacebookId();
+            } else {
+                alert('Que pena! Você não permitiu que o Vivento vinculasse sua conta do facebook.');
+            }
+        });
+    }
+
+    function facebookSignup() {
+        FB.getLoginStatus(function(response) {
+            if (response.status === 'connected') {
+                setFacebookId();
+            } else if (response.status === 'not_authorized') {
+                authorizeOnFacebook();
+            } else {
+                authorizeOnFacebook();
+            }
+        });
+    }
+
+    window.fbAsyncInit = function() {
+        FB.init({
+            appId      : <%= Facebook::APP_ID.to_s %>,//'473312806069988', // App ID
+            channelUrl : '/channel.html', // Channel File
+            status     : true, // check login status
+            cookie     : true, // enable cookies to allow the server to access the session
+            xfbml      : true  // parse XFBML
+        });
+    };
+
+    // Load the SDK Asynchronously
+    (function(d){
+        var js, id = 'facebook-jssdk', ref = d.getElementsByTagName('script')[0];
+        if (d.getElementById(id)) {return;}
+        js = d.createElement('script'); js.id = id; js.async = true;
+        js.src = "//connect.facebook.net/en_US/all.js";
+        ref.parentNode.insertBefore(js, ref);
+    }(document));
+</script>
+
+<% flash.each do |key, value| %>
+    <div class="alert <%= key %> hideit">
+        <p><%= value %></p>
+        <span class="close"></span>
+    </div>
+<% end %>
 <div id="under-construction">
     <div class="container clearfix">
-        <div class="sixteen columns">
 
+        <div class="eight columns bottom">
             <h1>Vamos criar sua conta?</h1>
-            <p>Preencha todos os campos:</p>
+            <%= link_to image_tag("sign_in_fb.png", alt: "Acessar utlizando sua conta no facebook"), 'javascript:facebookSignup();' %>&nbsp;&nbsp;&nbsp;ou
             <br>
-            <div class="clearfix"></div>
+            <br>
+            <p>Preencha todos os campos:</p>
+        </div>
 
-
-
+        <div class="eight columns bottom">
+            <br>
             <iframe src="https://www.facebook.com/plugins/like.php?href=https://vivento.herokuapp.com"
                 scrolling="no" frameborder="0"
-                style="border:none; width:450px; height:80px">
+                style="border:none; width:350px; height:80px">
             </iframe>
+        </div>
 
+        <div class="sixteen columns">
+            <div class="clearfix"></div>
             <%= form_for @user, :url => { :action => 'sign_up_confirm' } do |f| %>
 
                 <%= collection_select(:user, :condo_id, Condo.all, :id, :name, { :include_blank => 'Selecione seu condomínio' }, { :class => 'subscribe-text' }) %>
