refactoring para que um user possua um dos dois: facebook ou vivento account

--- a/app/views/people/edit.html.erb
+++ b/app/views/people/edit.html.erb
@@ -15,7 +15,7 @@
             <%= f.label :picture, "Foto do perfil" %>
             <br>
             <br>
-            <% if @person.has_facebook? %>
+            <% if @person.has_facebook_account? %>
                 <%= image_tag fb_picture(@person.user.facebook_id, 150) %>
             <% else %>
                 <%= avatar_for @person, 50 %>
