--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -26,7 +26,7 @@
         <!-- dados pessoais -->
         <ul class="team">
             <li>
-                <% if @person.user.has_facebook? %>
+                <% if @person.user.has_facebook_account? %>
                     <%= image_tag fb_picture(@person.user.facebook_id) %>
                 <% else %>
                     <%= avatar_for @person %>
@@ -44,7 +44,7 @@
             </li>
             <li>
                 <span class="envelope icon black"></span>
-                <strong><%= @person.user.email %></strong>
+                <strong><%= @person.email %></strong>
             </li>
             <li>
                 <span class="phone icon black"></span>
