--- a/app/views/users/sign_up.html.erb
+++ b/app/views/users/sign_up.html.erb
@@ -81,19 +81,22 @@
 
         <div class="sixteen columns">
             <div class="clearfix"></div>
-            <%= form_for @user, :url => { :action => 'sign_up_confirm' } do |f| %>
+            <%= form_for @user, :url => { :action => 'sign_up_confirm' } do |u| %>
 
                 <%= collection_select(:user, :condo_id, Condo.all, :id, :name, { :include_blank => 'Selecione seu condomínio' }, { :class => 'subscribe-text' }) %>
                 <br>
-                <%= f.text_field :email, :placeholder => "E-mail", :class => "subscribe-text" %>
-                <br>
-                <%= f.password_field :password, :placeholder => "Escolha uma senha", :class => "subscribe-text", autocomplete: "off" %>
-                <br>
-                <%= f.password_field :password_confirmation, :placeholder => "Confirme a senha", :class => "subscribe-text", autocomplete: "off" %>
-                <br>
-                <br>
-                <%= f.submit "Oba! Criar conta", class: "subscribe-button" %>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ou&nbsp;&nbsp;<%= link_to "cancelar", root_url %>
 
+                <% fields_for @vivento_account do |v| %>
+                    <%= v.text_field :email, :placeholder => "E-mail", :class => "subscribe-text" %>
+                    <br>
+                    <%= v.password_field :password, :placeholder => "Escolha uma senha", :class => "subscribe-text", autocomplete: "off" %>
+                    <br>
+                    <%= v.password_field :password_confirmation, :placeholder => "Confirme a senha", :class => "subscribe-text", autocomplete: "off" %>
+                <% end %>
+
+                <br>
+                <br>
+                <%= u.submit "Oba! Criar conta", class: "subscribe-button" %>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ou&nbsp;&nbsp;<%= link_to "cancelar", root_url %>
             <% end %>
             <br>
             <p>Já tem uma conta? <%= link_to "Ah, então vamos entrando...", sign_in_path %></p>
