--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -48,15 +48,15 @@
             </li>
             <li>
                 <span class="phone icon black"></span>
-                <strong><%= format_phone @person.phone_area_code, @person.phone_number %></strong>
+                <strong>11 98045-6449</strong>
             </li>
             <li>
                 <span class="calendar icon black"></span>
-                <strong><%= format_date @person.birthdate %></strong>
+                <strong>29/04/2986</strong>
             </li>
             <li>
                 <span class="nameplate_alt icon black"></span>
-                <strong><%= @person.cpf %></strong>
+                <strong>340.570.298-42</strong>
             </li>
         </ul>
         <!-- /dados pessoais -->
