--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,7 +14,7 @@
 					<li>
 						<a href="#">Minha conta</a>
 						<ul>
-							<li><%= link_to "Dados pessoais*", person_path(current_user.person) %></li>
+							<li><%= link_to "Dados pessoais*", me_path %></li>
 							<li><a href="#">Pagamentos</a></li>
 							<li><%= link_to "Taxa de condomínio", '/' %></li>
 							<li><a href="formas_de_pagamento.html">Formas de Pagamento</a></li>
@@ -27,14 +27,14 @@
 								<li><%= link_to "Gerenciar condomínios", condos_path %></li>
 								<li><%= link_to "Gerenciar blocos", buildings_path %></li>
 								<li><%= link_to "Gerenciar apartamentos", apartments_path %></li>
-								<li><%= link_to "Gerenciar moradores*", people_path %></li>
+								<li><%= link_to "Gerenciar moradores*", profiles_path %></li>
 							</ul>
 						</li>
 					<% end %>
 					<li>
 						<a href="#">Condomínio</a>
 						<ul>
-							<li><%= link_to "Parede do Elevador", :controller => "elevator_wall", :action => "index" %></li>
+							<li><%= link_to "Parede do Elevador", "/elevator_wall" %></li>
 							<li><a href="#">Caixa de Ideias</a>
 								<ul>
 									<li><a href="#">Em Discussão</a></li>
