--- a/app/views/people/new.html.erb
+++ b/app/views/people/new.html.erb
@@ -15,9 +15,9 @@
         <%= form_for(@person, :html => { :multipart => true, :class => "form-elements" }) do |f| %>
             <fieldset>
                 <%= f.label :picture, "Foto do perfil" %>
-                <% if @person.has_facebook_account? %>
+                <% if current_user.has_facebook_account? %>
                     <br><br>
-                    <%= image_tag fb_picture(@person.user.facebook_id, 150) %>
+                    <%= image_tag fb_picture(current_user.facebook_id, 150) %>
                     <br><br>
                 <% else %>
                     <br><br>
