--- a/app/views/people/edit.html.erb
+++ b/app/views/people/edit.html.erb
@@ -28,11 +28,11 @@
         </fieldset>
         <fieldset>
             <%= f.label :name, "Nome completo" %><br>
-            <%= f.text_field :name, :class => 'span5' %>
+            <%= f.text_field :name, :class => 'subscribe-text' %>
         </fieldset>
         <fieldset>
-            <%= f.label :gender, "Sexo" %><br>
-            <%= f.select :gender, to_genders_select(), { :include_blank => 'Selecione' } %>
+            <%= f.label :email, "E-mail" %><br>
+            <%= f.text_field :email, :class => 'subscribe-text' %>
         </fieldset>
         <br>
         <br>
