--- a/app/views/people/new.html.erb
+++ b/app/views/people/new.html.erb
@@ -1,4 +1,3 @@
-<div class="sixteen columns">
 <% unless flash.empty? %>
     <% flash.each do |key, value| %>
         <div class="alert <%= key %> hideit">
@@ -7,45 +6,35 @@
         </div>
     <% end %>
 <% end %>
-<!-- <div id="under-construction"> -->
-    <div class="container clearfix">
-        <h1>Falta pouco... agora é só completar seus dados pessoais e pronto!</h1>
-        <br>
-        <br>
-        <%= form_for(@person, :html => { :multipart => true, :class => "form-elements" }) do |f| %>
-            <fieldset>
-                <%= f.label :picture, "Foto do perfil" %>
-                <% if current_user.has_facebook_account? %>
-                    <br><br>
-                    <%= image_tag fb_picture(current_user.facebook_id, 150) %>
-                    <br><br>
-                <% else %>
-                    <br><br>
-                    <%= avatar_for @person, 50 %>
-                    <%= f.file_field :picture %>
-                    <br>
-                </fieldset>
+
+<div class="container clearfix">
+    <h1>Falta pouco... agora é só completar seus dados pessoais e pronto!</h1>
+    <br>
+    <br>
+    <%= form_for(@person, :html => { :multipart => true, :class => "form-elements" }) do |f| %>
+        <fieldset>
+            <%= f.label :picture, "Foto do perfil:" %>
+            <% if current_user.has_facebook_account? %>
+                <br><br>
+                <%= image_tag fb_picture(current_user.facebook_id, 100) %>
+                <br><br>
+            <% else %>
+                <br><br>
+                <%= avatar_for @person, 50 %>
+                <%= f.file_field :picture %>
+                <br>
             <% end %>
-            <fieldset>
-                <%= f.label :apartment_id, "Apartamento" %><br>
-                <%= collection_select(:person, :apartment_id, Apartment.all, :id, :number, { :include_blank => 'Selecione o apartamento' }, { :class => 'subscribe-text' }) %>
-            </fieldset>
-            <fieldset>
-                <%= f.label :email, "E-mail" %><br>
-                <%= f.text_field :email, :class => 'span5' %>
-            </fieldset>
-            <fieldset>
-                <%= f.label :name, "Nome completo" %><br>
-                <%= f.text_field :name, :class => 'span5' %>
-            </fieldset>
-            <fieldset>
-                <%= f.label :gender, "Sexo" %><br>
-                <%= f.select :gender, to_genders_select(), { :include_blank => 'Selecione' } %>
-            </fieldset>
-            <br>
-            <%= f.submit "Finalizar cadastro", class: "subscribe-button" %>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ou&nbsp;&nbsp;<%= link_to "cancelar", people_path %>
-        <% end %>
+        </fieldset>
+        <%= collection_select(:person, :apartment_id, Apartment.all, :id, :number, { :include_blank => 'Selecione o apartamento' }, { :class => 'subscribe-text' }) %>
+        <br>
+        <%= f.text_field :name, :class => 'subscribe-text' %>
+        <br>
+        <%= f.text_field :email, :class => "subscribe-text" %>
         <br>
         <br>
-    </div>
-<!-- </div> -->
+        <br>
+        <%= f.submit "Finalizar cadastro", class: "subscribe-button" %>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ou&nbsp;&nbsp;<%= link_to "cancelar", people_path %>
+    <% end %>
+    <br>
+    <br>
+</div>
