--- a/app/assets/stylesheets/css/custom.css
+++ b/app/assets/stylesheets/css/custom.css
@@ -3,3 +3,6 @@
 
 /* you can add any custom css code for any class, id, tags and anything here, it will be active.. */
 
+span.credit-card-brand img {
+    vertical-align: bottom;
+}
